@@ -1,3 +1,6 @@
+May 20, 2022
+   aliases: strip prefix 'LOW QUALITY PROTEIN:' from incoming aliases
+
 Apr 28, 2022
    tuned up logging
 
